トップページ スライドショー作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,9 @@
 
 //homes
 @import "homes/home";
+@import "homes/home-slidemenu.scss";
+@import "homes/home-header.scss";
+
 
 //orders
 @import "orders/new.scss";
