--- a/app/views/homes/_footer.html.haml
+++ b/app/views/homes/_footer.html.haml
@@ -5,7 +5,7 @@
                 %h2.FooterMenu__list__title Fmarketについて
                 %ul.FooterMenu__list_wrapper
                     %li.FooterMenu__list__small サービス詳細
-                    %li.FooterMenu__list__small XXXXXX
+                    %li.FooterMenu__list__small 公式ブログ
             
             .FooterMenu__list
                 %h2.FooterMenu__list__title ヘルプ＆ガイド
@@ -13,7 +13,7 @@
                     %li.FooterMenu__list__small 
                         Fmarketガイド
                     %li.FooterMenu__list__small
-                        XXXXXX
+                        偽ブランド撲滅活動
 
             .FooterMenu__list
                 %h2.FooterMenu__list__title プライバシーと利用規約
@@ -21,7 +21,7 @@
                     %li.FooterMenu__list__small 
                         プライバシーポリシー
                     %li.FooterMenu__list__small
-                        XXXXXX
+                        Fmarket利用規約
 
         .FooterBottom
             .FooterBottom__footer-logo
