--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -3,9 +3,13 @@
     = render 'header'
 
 
-    .Slide-menu
-        .Slide-menu__1
-        .Slide-menu__2
+    .Home-Slide-menu
+        .cont
+            .slider
+            %ul.nav
+            .side-nav.side-nav--right{"data-target": "right"}
+            .side-nav.side-nav--left{"data-target": "left"}
+
 
     %main.main-toppage
         .MainMenu
