売却済みの商品詳細ページから購入ページに行けないように変更
金額が３桁カンマ区切りが出るように変更

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -69,12 +69,16 @@
 
   .item-price-box
     %span.item-price-box__price
-      = "¥#{@item.price}"
+      = "¥#{@item.price.to_s(:delimited)}"
     %span.item-price-box__tax (税込)
     %span.item-price-box__postage 着払い
 
   .item-buy-btn
-    = button_to "購入画面に進む", buy_order_path(@item.id),method: :get, class: "btn-default item-buy-btn__red"
+    - if @item.selling_status == "売却済み" #active_hash導入後に変更が必要
+      .btn-default.item-buy-btn__sold
+        売り切れました
+    - else
+      = button_to "購入画面に進む", buy_order_path(@item.id),method: :get, class: "btn-default item-buy-btn__red"
   .item-description
     %p
       = @item.description
