--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -139,6 +139,15 @@
       line-height: 6rem;
       font-weight: 600;
     }
+    &__sold {
+      height: 5.5rem;
+      width: 58rem;
+      background-color: #888;
+      color: #fff;
+      font-size: 2.4rem;
+      line-height: 6rem;
+      font-weight: 600;
+    }
   }
   .item-description {
     padding: 3.2rem 0 0;
@@ -154,7 +163,7 @@
         background-color: #f5f5f5;
         color: #333;
         display: inline-block;
-        }
+      }
       .item-report-btn {
         padding: 0.8rem 1.6rem;
         border-radius: 4rem;
