--- a/app/views/mypages/exhibit_item.html.haml
+++ b/app/views/mypages/exhibit_item.html.haml
@@ -59,7 +59,7 @@
 
   .item-price-box
     %span.item-price-box__price
-      = "¥#{@item.price}"
+      = "¥#{@item.price.to_s(:delimited)}"
     %span.item-price-box__tax (税込)
     %span.item-price-box__postage 着払い
 
