--- a/app/views/homes/_header.html.haml
+++ b/app/views/homes/_header.html.haml
@@ -6,11 +6,10 @@
                     .HeaderTop__Menu__header-logo
 
                 .HeaderTop__Menu__header-search
-                    %form.search{action: "/jp/search/"}
-                    %input.search{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
-                    %button.search-logo
-                        %i.fas.fa-search
-
+                    = search_form_for(@q, url:search_homes_path) do |f|
+                        = f.search_field :name_cont_any, placeholder: "何かお探しですか？", class: "search_items_filed"
+                        = button_tag type: 'submit', class: "search_items_btn" do
+                            %i.fas.fa-search
         .HeaderBottom
             .HeaderBottom__Left
                 .HeaderBottom__Left__genre_search
