--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -24,7 +24,7 @@
                                                 - if image.item.selling_status == "売却済み"
                                                     .home__sold-out-image
                                                         %span.home__sold-out-text SOLD
-                                                = image_tag image.image, class:'favorite-item-image'
+                                                = image_tag image.image.url, class:'favorite-item-image'
             - if @items.any?
                 .MainMenu__CategoryLists
                     %h2.category-title 人気のカテゴリー
@@ -55,7 +55,7 @@
                                                         - if item.selling_status == "売却済み"
                                                             .home__sold-out-image
                                                                 %span.home__sold-out-text SOLD
-                                                        = image_tag item.images.first.image , class:'body-item-image'
+                                                        = image_tag item.images.first.image.url , class:'body-item-image'
                                                         %figcaption
                                                             = item.name
                                                 - break if itemscounts == 5
@@ -93,7 +93,7 @@
                                                         - if item.selling_status == "売却済み"
                                                             .home__sold-out-image
                                                                 %span.home__sold-out-text SOLD
-                                                        = image_tag item.images.first.image , class:'body-item-image'
+                                                        = image_tag item.images.first.image.url , class:'body-item-image'
                                                         %figcaption
                                                             = item.name
                                                 - break if itemscounts == 5
