--- a/app/assets/stylesheets/items/sell.scss
+++ b/app/assets/stylesheets/items/sell.scss
@@ -177,7 +177,8 @@
       .parent-wrapper,
       .children-wrapper,
       .grandchildren-wrapper,
-      .deliveryway-select-wrapper{
+      .deliveryway-select-wrapper,
+      .brand_select-wrapper{
         position: relative;
         .select-box {
           @extend .sell-item__form--name;
@@ -188,7 +189,8 @@
         #select-parent-category,
         #select-children-category,
         #select-grandchildren-category,
-        #select-delivery-way{
+        #select-delivery-way,
+        #item-brand-select{
           @extend .select-box;
         }
         .select-arrow {
@@ -346,6 +348,8 @@
   margin-top: 0;
 }
 
-.deliveryway-wrapper{
+.deliveryway-wrapper,
+.brand_wrapper
+{
   margin-top: 4rem;
 }
