--- a/app/views/homes/search.html.haml
+++ b/app/views/homes/search.html.haml
@@ -2,29 +2,20 @@
   = render 'header'
 
   .search_main
-    .search-menu
-      = search_form_for @q, url: search_homes_path ,html: { method: :post }, class: "search-menu__sort" do |f|
-        = f.select( :sorts, { '並び替え': 'id desc', '価格の安い順': 'price asc', '価格の高い順': 'price desc', '出品の古い順': 'updated_at asc', '出品の新しい順': 'updated_at desc', 'いいね!の多い順': 'likes_count desc' } , { selected: params[:q][:sorts] }, { onchange: 'this.form.submit()'} )
-        = f.submit '変更', class: "sort-submit-btn"
-      .search-menu__detailed
-        = search_form_for(@q, url:search_homes_path) do |f|
-          = f.label "キーワードを追加"
-          = f.search_field :name_cont_any, placeholder: "何かお探しですか？", class: "search_items_filed"
-
-          = f.label "カテゴリーを選択する"
-          .category-wrapper-search
-            = f.collection_select :category_id_eq_any , @category, :id , :name, {include_blank: "---"}, {id:'select-parent-category-search'}
-
-          = f.collection_check_boxes :cotegory_id_in, @category, :id, :name, {checked:@q.category_id_in}
-
-          = f.submit
     .search_result
-      %span.search-word
-        = params[:q][:name_cont_any]
-      %span.nokekka
-        の検索結果
-      %p.search_result__count
-        = "#{@items.count}件表示"
+      .search_result__search
+        .search_result__search__about
+          %span.search-word
+            = params[:q][:name_cont_any]
+          %span.nokekka
+            の検索結果
+          %p.search_result__search__about__count
+            = "#{@items.count}件表示"
+        .search_result__search__sort
+          = search_form_for @ransack, url: search_homes_path ,html: { method: :post }, class: "search-menu__sort" do |f|
+            = f.select( :sorts, { '並び替え': 'id desc', '価格の安い順': 'price asc', '価格の高い順': 'price desc', '出品の古い順': 'updated_at asc', '出品の新しい順': 'updated_at desc', 'いいね!の多い順': 'likes_count desc' } , { selected: params[:q][:sorts] }, { onchange: 'this.form.submit()'} )
+            = f.hidden_field :name_cont_any, value: params[:q][:name_cont_any]
+            = f.submit '変更', class: "sort-submit-btn"
       %ul.search_result__lists
         - @items.each do |item|
           %li.search_result__lists__list
@@ -40,7 +31,7 @@
                   = link_to "/items/#{item.id}/likes", method: :post, remote: true do
                     %i{class: "far fa-heart none_heart"}
                   = item.likes.length
-  -# = paginate @items
+  = paginate @items
 
   = render 'footer'
   = render 'postitem'
