--- a/app/views/mypages/index.html.haml
+++ b/app/views/mypages/index.html.haml
@@ -8,7 +8,7 @@
       .mypage-header
         .mypage-header__image
         .mypage-header__name
-          ユーザー名前
+          = current_user.nickname
         .mypage-header__evaluation
           評価
         .mypage-header__evaluation-num
