--- a/app/views/mypages/listing.html.haml
+++ b/app/views/mypages/listing.html.haml
@@ -31,7 +31,7 @@
               = link_to item_show_mypage_index_path(item.id),data: { turbolinks: false}, class: "listings-report-areas-exsis__area__link" do
 
                 %figure.listings-report-areas-exsis__area__link__figure
-                  = image_tag item.images.first.image, class: 'listings-report-areas-exsis__area__link__figure__image'
+                  = image_tag item.images.first.image.url, class: 'listings-report-areas-exsis__area__link__figure__image'
 
                 .listings-report-areas-exsis__area__link__item
                   %p.listings-report-areas-exsis__area__link__item__name
