= button_to "メルカリをはじめる", home_index_path, method: :get, class: 'btn-default_go-mercari'

--- a/app/views/signups/done.html.haml
+++ b/app/views/signups/done.html.haml
@@ -36,7 +36,7 @@
           会員登録が完了しました。
       .field-creditcard
         .done-btn
-          = button_to "メルカリをはじめる", home_index_path, method: :get, class: 'btn-default_go-mercari'
+          = button_to "メルカリをはじめる", root_path, method: :get, class: 'btn-default_go-mercari'
       .field-image
         =image_tag 'mercari-back.jpg', class: "image-phone"
         =image_tag 'mercari-smart.png', height: '275', class: "put-done"
